minor changes adding  table

--- a/home-test-next/app/globals.css
+++ b/home-test-next/app/globals.css
@@ -27,7 +27,7 @@
 
 
   --color-border-light: #0859c6;
-  --color-border-dark: #080b0c;
+  --color-border-dark: #26292b;
 
   --color-error-light: #dc2626;
   --color-error-dark: #da3636;
